<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Wide Words</string>
    <string name="learn_words">LEARN WORDS</string>
    <string name="quiz_me">QUIZ ME</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="title_activity_results">Results</string>
    <string name="correct_with_space">"  correct"</string>
    <string name="words_mastered">"<xliff:g id="allcount">%1$d</xliff:g> words mastered"</string>
    <string name="you_have">"You have "</string>
    <string name="words_left_to_master">" words left to master"</string>
    <string name="quiz">quiz</string>
    <string name="learn_list">learn_list</string>
    <string name="select_a_correct_definition_for">Select a correct definition for:</string>
    <string name="this_quiz_you_scored">This quiz, you scored:</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_learn_word">Learn</string>
    <string name="all_words">ALL WORDS</string>
    <string name="new_words">NEW WORDS</string>
    <string name="mastered_words">MASTERED WORDS</string>
    <string name="all_words_with_count">ALL WORDS (<xliff:g id="allcount">%1$d</xliff:g>)</string>
    <string name="new_words_with_count">NEW WORDS (<xliff:g id="newcount">%1$d</xliff:g>)</string>
    <string name="in_progress_message"><xliff:g id="newcount">%1$d</xliff:g>/<xliff:g id="totalcount">%2$d</xliff:g></string>
    <string name="mastered_words_with_count">MASTERED WORDS (<xliff:g id="masteredcount">%1$d</xliff:g>)</string>
    <string name="quiz_toolbar">Quiz (<xliff:g id="quizcount">%1$d</xliff:g>/<xliff:g id="quizTotal">%2$d</xliff:g>)</string>
    <string name="welcome_message">Welcome to Wide Words.<![CDATA[<br /><br />]]>This app will help you master
        <xliff:g id="quizcount">%1$d</xliff:g> challenging words.<![CDATA[<br /><br />Use <b>LEARN WORDS</b>
        to review the words and their definitions.<br /><br />When you\'re ready take the <b>QUIZ</b>.]]></string>
    <string name="completion_message">Congratulations - you have mastered all <xliff:g id="quizcount">%1$d</xliff:g> words.
        <![CDATA[<br /><br />You are well on the way to becoming a fully fledged sesquipedalian.]]></string>
    <string name="so_far_you_have_mastered">So far you have mastered</string>
    <string name="words">words</string>
    <string name="widewords_v1_0">WideWords v1.0</string>
    <string name="reset_mastered_words">Reset mastered words</string>
    <string name="check_for_updated_words">Check for updated words</string>
    <string name="settings">Settings</string>
    <string name="quiz_instructions"><![CDATA[When you start the quiz you will have 15 seconds to pick the correct definition for a word.\n\nOnce you have answered correctly three times for a word, you have mastered it - it will be moved to your mastered word list, and you will not be quizzed on it again.]]></string>
    <string name="word_counts_reset">Word counts reset.</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share">Share</string>
    <string name="share_intent_string"><xliff:g id="word">%1$s</xliff:g> : <xliff:g id="definition">%2$s</xliff:g> - from WideWords for Android</string>
    <string name="update_message">Update received from server: \n<xliff:g id="allcount">%1$d</xliff:g> words updated \n<xliff:g id="allcount">%2$d</xliff:g> new words</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="dash">-</string>
    <string name="definition_of_a_word">Definition of a word</string>
    <string name="makes_learning_words_fun">Makes learning words fun</string>
    <string name="a_word_to_learn">A word to learn</string>
    <string name="wide_words">Wide Words</string>
    <string name="widewords">WideWords</string>
    <string name="new_word">New word</string>
    <string name="refresh">Refresh</string>
    <string name="intro_text">Learn words by viewing definitions. Once you are feeling confident, take a quiz and see how many you can remember.</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="complete_message">You have mastered all words in the quiz.\n\nPress the reset quiz button below to reset the app and start again.</string>
    <string name="start_quiz">start quiz</string>
    <string name="reset_mastered">Reset mastered words</string>
    <string name="finish_quiz">FINISH</string>
</resources>
