<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:id="@+id/appwidget_appname"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:padding="5dp"
            android:text="@string/widewords"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/appwidget_word"
            android:layout_below="@id/appwidget_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/a_word_to_learn"
            android:text="@string/wide_words"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_height="0dp"
        android:layout_weight="2">
    <TextView
        android:id="@+id/appwidget_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/definition_of_a_word"
        android:text="@string/makes_learning_words_fun"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:textAlignment="center"/>

        <ImageView
            android:src="@drawable/ic_autorenew_white_24px"
            android:contentDescription="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/refresh_widget_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>





    </RelativeLayout>

</LinearLayout>