<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uk.co.rustynailor.widewords.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/word_container"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="normal"
                android:gravity="center"
                android:text="@string/widewords_v1_0"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="24sp"
                android:background="@drawable/ww_button_background"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/reset_words"
                android:text="@string/reset_mastered_words"
                android:layout_marginBottom="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ww_button_background"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/download_words"
                android:text="@string/check_for_updated_words"
                android:layout_marginBottom="20dp"
               />


        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
