<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uk.co.rustynailor.widewords.LearnWordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:background="@color/colorAccent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:id="@+id/word_container"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="normal|bold"
                android:gravity="center"
                android:layout_marginEnd="20dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:id="@+id/definition_container"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textStyle="normal|italic"/>
        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:id="@+id/back_button"
                android:text="@string/back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:id="@+id/next_button"
                android:text="@string/next"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:id="@+id/finish_button"
            android:text="@string/finish"/>

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
